[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/bg.png" type="Texture" id=1]
[ext_resource path="res://hud/playpause_shaded.png" type="Texture" id=2]
[ext_resource path="res://maps/test_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://712_serif.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://hud/pause_bg.png" type="Texture" id=5]
[ext_resource path="res://base.gd" type="Script" id=6]
[ext_resource path="res://hud/savestate_select.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://712_serif.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("select:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="base" type="Node2D"]
script = ExtResource( 6 )

[node name="top_hud" type="CanvasLayer" parent="."]

[node name="bg" type="Sprite" parent="top_hud"]
position = Vector2( 120, 8 )
texture = ExtResource( 1 )

[node name="playpause" type="Sprite" parent="top_hud"]
position = Vector2( 12, 8 )
texture = ExtResource( 2 )
hframes = 2

[node name="frame" type="Label" parent="top_hud"]
margin_left = 128.0
margin_top = 2.0
margin_right = 236.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_map" parent="." instance=ExtResource( 3 )]

[node name="pause_layer" type="CanvasLayer" parent="."]

[node name="pause_menu" type="Node2D" parent="pause_layer"]

[node name="bg" type="Sprite" parent="pause_layer/pause_menu"]
position = Vector2( 120, 88 )
texture = ExtResource( 5 )

[node name="s1_frames" type="Label" parent="pause_layer/pause_menu"]
margin_left = 38.0
margin_top = 52.0
margin_right = 78.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s2_frames" type="Label" parent="pause_layer/pause_menu"]
margin_left = 158.0
margin_top = 52.0
margin_right = 198.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s3_frames" type="Label" parent="pause_layer/pause_menu"]
margin_left = 38.0
margin_top = 100.0
margin_right = 78.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s4_frames" type="Label" parent="pause_layer/pause_menu"]
margin_left = 158.0
margin_top = 100.0
margin_right = 198.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="Sprite" parent="pause_layer/pause_menu"]
position = Vector2( 57, 40 )
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="pause_layer/pause_menu"]
anims/blink = SubResource( 4 )
